tests/vendor/valid/simple/short_circuit_and_fail.c
//expect 0
//tags: simple, short-circuit
int main() {
    int a = 0;
    0 && (a = 5);
    return a;
}