tests/vendor/invalid/semantics/divide_by_function.c
//tags: functions
int x();

int main() {
    int a = 10 / x;
    return 0;
}